--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" />
-    <!--[if IE]><link rel="stylesheet" href="%PUBLIC_URL%/ie-fix.css"><![endif]-->
+    <link rel="stylesheet" href="%PUBLIC_URL%/ie-fix.css">
     <title>Vaga na Creche</title>
   </head>
   <body>
